# Karna-GenAI-CLI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  Makefile  NOTICES.md  README.md  SECURITY.md  _gamma_scorecard.md  _persona_driver.py  _persona_driver_beta.py  _persona_driver_gamma.py  agent_output.txt  api.py  contracts.db  install.ps1  install.py  install.sh  license.md  pyproject.toml  test_api.py
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  bug_report.md  bug_report.yml  config.yml  feature.md  feature.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  copilot-autofix.yml  docker.yml  lint.yml  release.yml  security.yml  test.yml  tui-pipeline.yml  visual-regression.yml  web-deploy.yml  web-ui-pipeline.yml
.venv-audit/: pyvenv.cfg
.venv-audit/Scripts/: activate  activate.bat
20-principal-investigator/: _events.json  _transcript.md  protocol_skeleton.md
21-research-methodologist/: _events.json  _transcript.md  prospero_review.md
22-field-coordinator/: _events.json  _transcript.md  fieldwork_plan.md
23-senior-risk-communicator/: _events.json  _transcript.md  cerc_talking_points.md
24-health-writer/: _events.json  _transcript.md  diff_analysis.md  original.md  rewritten.md
25-plain-language-editor/: _events.json  _transcript.md  diff.md  kit_original.md  kit_revised.md
26-behavioral-scientist/: _events.json  _transcript.md  codebook.md  coded_results.md  transcripts.md
27-it-support-l1/: _events.json  _transcript.md  ticket_resolution.md
28-senior-it-admin/: _events.json  _transcript.md  rca_report.md
29-contract-admin/: _events.json  _transcript.md  monthly_cdr.md
30-data-steward/: _events.json  _transcript.md  lineage_audit.md
_cli_audit/: REPORT.md  results.json
docs/: AUTONOMOUS_PUSH_4H.md  CC_COMPONENT_LIBRARY.md  CODEBASE_MAP.md  DEMO_RUNBOOK.md  DEMO_WALKTHROUGH.md  DEVELOPER_GUIDE.md  DIFF_AUDIT.md  INSTALL.md  PARITY_SUMMARY.md  PHASE4_DESIGN.md  RELEASE_CHECKLIST_0.1.1.md  RELEASE_CHECKLIST_0.1.3.md  SECURITY_HARDENING.md  TEST_PIPELINE.md  TUI_AUDIT.md  TUI_BUGS.md  TUI_COMPONENTS.md  mcp_servers.md  recipes.md
electron/: README.md  main.js  package.json  preload.js
karna/: __init__.py  cli.py  config.py  init.py  models.py  telemetry.py
karna/acp_server/: __init__.py  server.py
karna/agents/: __init__.py  autonomous.py  loop.py  parallel.py  plan.py  safety.py  subagent.py
karna/auth/: __init__.py  credentials.py  keyring_store.py  pool.py
karna/backends/: __init__.py
karna/comms/: __init__.py  inbox.py  message.py
karna/compaction/: __init__.py  compactor.py  prompts.py
karna/context/: __init__.py  environment.py  git.py  manager.py  project.py  references.py
karna/cron/: __init__.py  daemon.py  expression.py  jobs.py  runner.py  scheduler.py  store.py
karna/gateway/: __init__.py
karna/gov_contract_scraper/: PROJECT_SUMMARY.md  README.md  api.py  audit_data.py  check_db.py  contract_scraper.py  data_audit.py  database.py  fastapi_server.py  install_and_run.bat  requirements.txt  run_api.bat  run_audit.bat  run_test_scrape.py  scheduler.py  test_scraper.py
karna/hooks/: __init__.py  builtins.py  dispatcher.py
karna/keybindings/: __init__.py  apply.py  defaults.py  manager.py
karna/mcp_server/: __init__.py  memory_server.py  server.py
karna/mcp_servers/: __init__.py  computer_controller_server.py
karna/memory/: __init__.py  extractor.py  index.py  manager.py  memdir.py  profile.py  prompts.py  types.py
karna/permissions/: __init__.py  manager.py
karna/plugins/: __init__.py  loader.py
karna/prompts/: __init__.py  cc_tool_prompts.py  system.py  tool_descriptions.py
karna/providers/: __init__.py  _retry.py  anthropic.py  azure.py  base.py  bedrock.py  caching.py  canonical_models.json  failover.py  local.py  moa.py  openai.py  openrouter.py  router.py  vertex.py
karna/rag/: __init__.py  chunker.py  context.py  embedder.py  store.py
karna/recipes/: __init__.py  loader.py  model.py  runner.py  sub.py
karna/rest_server/: __init__.py  app.py  session_manager.py
karna/security/: __init__.py  guards.py  prompt_injection.py  scrub.py
karna/server/: __init__.py
karna/sessions/: __init__.py  cost.py  db.py
karna/skills/: __init__.py  loader.py
karna/tokens/: __init__.py  counter.py
karna/tools/: __init__.py  base.py  bash.py  browser.py  clipboard.py  comms.py  database.py  document.py  edit.py  git_ops.py  glob.py  grep.py  image.py  mcp.py  monitor.py  notebook.py  read.py  task.py  task_registry.py  voice.py  web_fetch.py  web_search.py  write.py
karna/tui/: __init__.py  banner.py  completer.py  design_tokens.py  (+16 more)
scripts/: build_canonical_models.py
templates/: KARNA-bd.md  KARNA-data-science.md  KARNA-engineering.md  KARNA-health-comms.md  KARNA-research.md  KARNA.md
tests/: __init__.py  dogfood_m27_docs.py  test_acp_server.py  test_agent_loop.py  test_auto_compact.py  test_background_bash.py  test_browser_tool.py  test_canonical_models.py  test_cc_chat.py  test_cc_dialogs.py  test_cc_diffs.py  test_cc_input.py  test_cc_markdown.py  test_cc_permissions.py  test_cc_pickers.py  test_cc_search.py  test_cc_spinners.py  test_cc_status.py  test_cc_tasks.py  test_cc_tool_prompts.py  test_cli.py  test_cli_surface.py  test_clipboard.py  test_comms.py  test_comms_tool_security.py  test_compaction_integration.py  test_computer_controller_server.py  test_config.py  test_context.py  test_context_refs.py  test_cost.py  test_cron.py  test_database_tool.py  test_database_tool_security.py  test_design_tokens.py  test_diff_render.py  test_document_tool.py  test_dogfood.py  test_electron_shell.py  test_error_recovery.py  (+63 more)
tools/: ansi_to_png.py  cli_surface_audit.py  extract_video_frames.py  live_smoke.py  record_demo.py  stress_100.py  tui_pty_driver.py  tui_screenshot.py  visual_regression.py  web_ui_audit.py
web/: .gitignore  README.md  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts
(+105 files in other folders)
