[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karna"
version = "0.1.0"
description = "Nellie — Karna's internal AI agent harness. CLI binary: nellie."
authors = [{name = "Viraj Sharma", email = "virajsharma8547@gmail.com"}]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE.md", "NOTICES.md"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.13.2",
    "prompt-toolkit>=3.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
web = ["trafilatura>=1.8"]
vertex = ["google-auth>=2.49.2"]
bedrock = ["boto3>=1.34"]
cron = ["croniter>=2.0", "pyyaml>=6.0"]
db = ["psycopg2-binary>=2.9", "pymysql>=1.1"]
docs = ["pdfplumber>=0.10", "python-docx>=1.0", "python-pptx>=0.6", "openpyxl>=3.1"]
browser = ["playwright>=1.40"]
rag = ["chromadb>=0.4"]
rest = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
recipes = ["pyyaml>=6.0", "jinja2>=3.1"]
webui = ["fastapi>=0.110", "uvicorn[standard]>=0.30", "jinja2>=3.1", "python-multipart>=0.0.6"]
web-test = ["playwright>=1.40"]
all = ["karna[tokens,web,vertex,bedrock,cron,db,docs,browser,rag,rest,recipes,webui]"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "pre-commit>=4.5.1",
]

[project.scripts]
nellie = "karna.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"karna/memory/prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail any single test that runs >60s — catches the 10-minute-silent-success
# failure mode we surfaced during the MCP server work. `thread` method lets
# us interrupt blocking I/O (default `signal` can't interrupt threads on
# Windows + breaks pytest-asyncio).
timeout = 60
timeout_method = "thread"
markers = [
    "integration: tests that require alpha-shipped features (REST / recipes / ACP / computer_controller). Skipped by default until those land.",
    "live: tests that hit real external APIs — skipped by default",
]

[tool.setuptools.packages.find]
include = ["karna*"]
exclude = ["research*", "tests*", "docs*"]
