[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karna"
version = "0.1.3"
description = "Nellie — Karna's internal AI agent harness. CLI binary: nellie."
authors = [{name = "Viraj Sharma", email = "virajsharma8547@gmail.com"}]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE.md", "NOTICES.md"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.24.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.13.2",
    "prompt-toolkit>=3.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.2.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
web = ["trafilatura>=1.8"]
vertex = ["google-auth>=2.49.2"]
bedrock = ["boto3>=1.34"]
cron = ["croniter>=2.0", "pyyaml>=6.0"]
db = ["psycopg2-binary>=2.9", "pymysql>=1.1"]
docs = ["pdfplumber>=0.10", "python-docx>=1.0", "python-pptx>=0.6", "openpyxl>=3.1"]
browser = ["playwright>=1.40"]
rag = ["chromadb>=0.4"]
rest = ["fastapi>=0.110", "uvicorn[standard]>=0.30"]
recipes = ["pyyaml>=6.0", "jinja2>=3.1"]
webui = ["fastapi>=0.110", "uvicorn[standard]>=0.30", "jinja2>=3.1", "python-multipart>=0.0.6"]
web-test = ["playwright>=1.40"]
# PTY-driven TUI harness (tools/tui_pty_driver.py + tests/test_tui_pty.py).
# Split by platform so installs don't break on the wrong OS.
pty = [
    "pywinpty>=2.0; sys_platform == 'win32'",
    "ptyprocess>=0.7; sys_platform != 'win32'",
]
all = ["karna[tokens,web,vertex,bedrock,cron,db,docs,browser,rag,rest,recipes,webui]"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "pre-commit>=4.5.1",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "ptyprocess>=0.7; sys_platform != 'win32'",
]

[project.scripts]
nellie = "karna.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"
# Exclude files that aren't part of the shipped package:
# - ``_persona_driver*.py``: one-off dogfood scripts at repo root
# - ``karna/gov_contract_scraper/``: untracked PoC from an earlier demo
# - ``research/``: persona scaffolding + benchmark scratch work
# - common virtualenv / cache dirs
extend-exclude = [
    "_persona_driver*.py",
    "_demo_nellie_driver.py",
    "karna/gov_contract_scraper",
    "research",
    ".venv*",
    "_web_screenshots",
    "_web_interactions",
    "_visual_diff",
    "_demo_recordings",
    "_cli_audit",
    "_frames",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"karna/memory/prompts.py" = ["E501"]
# Scripts + test harnesses routinely carry long docstring URLs, data
# literals, and rich-formatted print strings. Enforcing line-length on
# them is noise, not signal — ignore E501 across these directories.
"tools/*" = ["E501", "E402", "E722"]
"tests/*" = ["E501", "E402"]
"karna/cli.py" = ["E501"]
"karna/rest_server/*" = ["E501"]
"karna/tui/*" = ["E501", "E402"]
"karna/providers/base.py" = ["E501"]
"karna/providers/openrouter.py" = ["E501"]
"karna/providers/anthropic.py" = ["E501"]
"karna/providers/local.py" = ["E501"]
"karna/providers/bedrock.py" = ["E501"]
"karna/providers/vertex.py" = ["E501"]
"karna/providers/azure.py" = ["E501"]
"karna/providers/moa.py" = ["E501"]
"karna/providers/router.py" = ["E501"]
"karna/web/*" = ["E501"]
"karna/sessions/*" = ["E501"]
"karna/agents/*" = ["E501"]
"karna/recipes/*" = ["E501"]
"karna/mcp_server/*" = ["E501"]
"karna/mcp_servers/*" = ["E501"]
"karna/acp_server/*" = ["E501"]
"karna/compaction/*" = ["E501"]
"karna/security/*" = ["E501"]
"karna/skills/*" = ["E501"]
"karna/tools/*" = ["E501"]
"karna/rag/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Fail any single test that runs >60s — catches the 10-minute-silent-success
# failure mode we surfaced during the MCP server work. `thread` method lets
# us interrupt blocking I/O (default `signal` can't interrupt threads on
# Windows + breaks pytest-asyncio).
timeout = 60
timeout_method = "thread"
markers = [
    "integration: tests that require alpha-shipped features (REST / recipes / ACP / computer_controller). Skipped by default until those land.",
    "live: tests that hit real external APIs — skipped by default",
]

[tool.setuptools.packages.find]
include = ["karna*"]
exclude = ["research*", "tests*", "docs*"]
