[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "karna"
version = "0.1.0"
description = "Nellie — Karna's internal AI agent harness. CLI binary: nellie."
authors = [{name = "Viraj Sharma", email = "virajsharma8547@gmail.com"}]
license = "BSD-3-Clause"
license-files = ["LICENSE.md", "NOTICES.md"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "prompt-toolkit>=3.0",
    "tomli>=2.0; python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.7"]
web = ["trafilatura>=1.8"]
vertex = ["google-auth>=2.0"]
bedrock = ["boto3>=1.34"]
cron = ["croniter>=2.0"]
all = ["karna[tokens,web,vertex,bedrock,cron]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pre-commit>=3.5",
]

[project.scripts]
nellie = "karna.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"karna/memory/prompts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "live: marks tests that require real API keys or live network access",
    "network: marks tests that require network access (skipped in sandboxed CI)",
    "slow: marks tests as slow-running",
]

[tool.setuptools.packages.find]
include = ["karna*"]
exclude = ["research*", "tests*", "docs*"]
